# MBclaw-Lite

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  MEMORY_SYSTEM_REVIEW.md  PHASE_1_IMPLEMENTATION_PLAN.md  README.md  index.html  pyproject.toml  requirements.txt
.agents_tmp/: PLAN.md
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/docs/: ARCHITECTURE.md  BUILD.md
android/patch/: MODIFICATIONS.md  patch_and_build.sh
android/scripts/: build.sh  setup_cloud.sh  setup_sandbox.sh
app/: agent.py  api.py  classification.py  cli.py  config.py  database.py  db.py  feedback.py  llm.py  main.py  memory.py  metrics.py  models.py  pipeline.py  providers.py  retrieval.py  search.py  skills.py  snapshot.py  startup.py  tools.py  v2_app.py
cloud/mother-body/: .env.example  Cargo.toml  README.md
cloud/mother-body/scripts/: deploy.sh
cloud/mother-body/src/: main.rs
cloud/mother-body/src/api/: mod.rs
cloud/mother-body/src/auth/: mod.rs
cloud/mother-body/src/db/: mod.rs
cloud/mother-body/src/proxy/: mod.rs
css/: style.css
data/: _agt_test.db  endpoints.json  mbclaw.db-shm  mbclaw.db-wal
docs/: README.md
js/: game.js
k8s/: configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  service.yaml
memory/: README.md
migrations/: 001_memory_v1.sql
projects/: README.md
prompts/: README.md
scripts/: pull_uploads.sh
snapshots/: README.md
summaries/: README.md
tests/: conftest.py  test_api.py  test_gateway.py
tools/: README.md
(+163 files in other folders)
