[project]
name = "mbclaw"
version = "0.1.0"
description = "MBclaw — Personal AI Assistant with long-term memory"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.35",
    "pydantic>=2.9.2",
    "jieba>=0.42.1",
    "httpx>=0.27.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.3", "pytest-cov>=5.0.0"]

[project.scripts]
mbclaw = "app.cli:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
